crates/squealy-macros/tests/compile_fail/conflicting_generated_default.stderr
error: column `label` cannot combine `generated` with a default
 --> tests/compile_fail/conflicting_generated_default.rs:3:10
  |
3 | #[derive(Table)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
